Changed to using SDL2 instead of QT5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,12 @@ cmake_minimum_required(VERSION 3.2)
 project(TopologyWars)
 include_directories(include)
 
-find_package(Qt5Widgets)
-include_directories(${Qt5Widgets_INCLUDE_DIRS})
+# Include SDL2 packages
+INCLUDE(FindPkgConfig)
+PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
+PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
+INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
 
-# Suggested for CMake & QT but not undersood or needed yet
-#add_definitions(${Qt5Widgets_DEFINITIONS})
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
-#qt5_generate_moc(main.cpp main.moc)
+add_executable(${PROJECT_NAME} src/main.cpp)
 
-add_executable(TopologyWars 
-        src/main.cpp
-        src/window.cpp
-        )
-
-target_link_libraries(TopologyWars Qt5::Widgets)
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
